Simplify config: Remove plugin, let Netlify auto-detect Next.js

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,9 @@
 # Netlify Configuration for AMP'd Images
-# Fixes Next.js 14 compatibility with Netlify
+# Simple config - let Netlify auto-detect Next.js
 
 [build]
   command = "npm run build"
   publish = ".next"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
 [build.environment]
   NODE_VERSION = "20"
-  NPM_FLAGS = "--legacy-peer-deps"
-
-# Disable form detection (not needed for this app)
-[forms]
-  enabled = false
