--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,10 @@
 # Netlify Configuration for AMP'd Images
-# Simple config - let Netlify auto-detect Next.js
 [build]
   command = "npm run build"
   publish = ".next"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 [build.environment]
   NODE_VERSION = "20"
