Convert to Netlify Functions - permanent fix for API routes

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,9 @@
   command = "npm run build"
   publish = ".next"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
 [build.environment]
   NODE_VERSION = "20"
+
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
