--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start",
     "lint": "eslint"
   },
-  "dependencies": {
-    "@anthropic-ai/sdk": "^0.68.0",
-    "clsx": "^2.1.1",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
-  },
+"dependencies": {
+  "@anthropic-ai/sdk": "^0.32.1",
+  "busboy": "^1.6.0",
+  "next": "15.0.3",
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0"
+},
+
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
